Fixed The Culture spacing

--- a/assets/about.css
+++ b/assets/about.css
@@ -108,7 +108,7 @@
 
     }
 
-    h4:nth-child(7){
+    h4:nth-child(9){
         margin-top: 55px;
 
     }
